# glycon

./: .gitignore  README.md  build.zig  flake.nix  meson.build  meson_options.txt
.cache/clangd/index/: bdbp_util.c.7219DD7186CDC787.idx  bdbp_util.h.52200C4A06C00703.idx  binary_debug_protocol.h.BC32953CA035E2BF.idx  buffer.c.473745415E087774.idx  buffer.h.73B6DDD35486DC31.idx  bus.c.EE188F9C10469C68.idx  bus.h.6C27C4389432C91C.idx  command.c.AD97AE41930D7D9B.idx  command.h.B2BD0FC78467FD8D.idx  commands.c.BBA7EE09A8875FBD.idx  commands.h.A726BDA3CDA4779E.idx  connection.c.6FACFF0A3749BF12.idx  connection.c.D5DE02774EA55DAF.idx  connection.h.F785103F51472542.idx  debugger.c.CB07271F5D88130B.idx  debugger.h.9E9C98CB1E2F2184.idx  disassemble.c.60A9CC242002F86C.idx  disassemble.c.9A73A36C76E9B44F.idx  disassemble.h.8A0DA7DF231FA352.idx  flash.c.5A67ADCCBFE3BDC1.idx  flash.c.E47A8043DA96BC75.idx  flash.h.E0082C4FBBA77997.idx  glycon.h.49227613DE8941DC.idx  help.c.D12800A2D9BBD7EA.idx  main.c.3BAC5B4FE193886E.idx  main.c.6A047044AF09E883.idx  memory.c.D25FF07330A9B44F.idx  parser.c.7E2968947E30E4D0.idx  parser.h.B53FCFAD5E60F996.idx  ping.c.B4014B2A90A2E024.idx  pinout.h.A45AEB4E5CA8B8CA.idx  quit.c.77627FF41F1BB72B.idx  serial.c.DB019B836AFB24A2.idx  serial.h.443E79900F16D557.idx  target.c.BD60514FBC11C3C4.idx  target.h.864DC31C9C04DAF6.idx  timing.h.BF035D59D0D713A8.idx  util.h.72FAFB3965343426.idx  value.c.E7DF37649C92E4A8.idx  value.h.54F677A189B5DC08.idx  (+2 more)
.ccls-cache/@@home@florian@projects@glycon/: @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-least.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wchar.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@sys@cdefs.h.blob  @usr@lib@clang@17@include@__stddef_max_align_t.h.blob  @usr@lib@clang@17@include@stdbool.h.blob  @usr@lib@clang@17@include@stddef.h.blob  @usr@lib@clang@17@include@stdint.h.blob
.ccls-cache/@home@florian@projects@glycon/: glyco@src@pinout.h  glyco@src@pinout.h.blob  glyco@src@util.h.blob  glydb@src@buffer.h.blob
bdbp/: meson.build
bdbp/include/bdbp/: binary_debug_protocol.h
common/: meson.build
common/include/common/: binary_debug_protocol.h  glycon.h
coprocessor/: avr-atmega2560-cross.ini  meson.build
coprocessor/src/: main.c  pinout.c  pinout.h  serial.c  serial.h
cross/: avr-atmega2560-cross.ini
doc/kicad/: #auto_saved_files#  _autosave-glycon.kicad_sch  fp-info-cache  glycon-0204.kicad_prl  glycon-0204.kicad_pro  glycon.kicad_pcb  glycon.kicad_prl  glycon.kicad_pro  glycon.kicad_sch  glycon.kicad_sch-bak  glycon.xml  glycon1.kicad_sch  ioboard.kicad_sch  parts_order.txt  ~glycon.kicad_sch.lck
doc/kicad/gerber/: glycon-B_Cu.gbr  glycon-B_Mask.gbr  glycon-B_Plakken.gbr  glycon-B_Silkscreen.gbr  glycon-Edge_Cuts.gbr  glycon-F_ masker.gbr  glycon-F_Cu.gbr  glycon-F_Plakken.gbr  glycon-F_Silkscreen.gbr  glycon-In1_Cu.gbr  glycon-In2_Cu.gbr  glycon-job.gbrjob
doc/kicad/glycon-gbrs/: glycon-job.gbrjob  test.kicad_pcb
doc/kicad/glycon_rev1.0/: glycon_02_16.csv  glycon_02_16.kicad_pcb  glycon_02_16.kicad_prl  glycon_02_16.kicad_pro  glycon_02_16.kicad_sch  glycon_02_16.xml
doc/ledmatrix/: fp-info-cache  ledmatrix.kicad_prl  ledmatrix.kicad_pro  ledmatrix.kicad_sch
doc/ledmatrix/ledmatrix/: ledmatrix.kicad_prl  ledmatrix.kicad_sch
doc/ledmatrix/test/: test.kicad_pcb  test.kicad_prl  test.kicad_pro  test.kicad_sch
glyco/: meson.build  meson_options.txt
glyco/src/: bus.c  bus.h  flash.c  flash.h  main.c  pinout.c  pinout.h  protocol.h  serial.c  serial.h  timing.h  util.h
glydb/: meson.build
glydb/src/: bdbp_util.c  bdbp_util.h  buffer.c  buffer.h  command.c  command.h  connection.c  connection.h  debugger.c  debugger.h  glycon.h  interpreter.c  interpreter.h  main.c  main.cpp  parser.c  parser.h  protocol.c  protocol.h  target.c  target.h  value.c  value.h
glydb/src/command/: command.c  command.h  parser.c  parser.h
glydb/src/commands/: commands.c  commands.h  connection.c  disassemble.c  flash.c  help.c  memory.c  ping.c  quit.c
glydb/src/z80/: disassemble.c  disassemble.h  z80.c  z80.h
glyos/: meson.build
glyos/kernel/: main.z80
glysim/src/: main.zig
hardware/gerbers/: glycon-B_Cu.gbl  glycon-B_Mask.gbs  glycon-B_Plakken.gbp  glycon-B_Silkscreen.gbo  glycon-Edge_Cuts.gm1  glycon-F_ masker.gts  glycon-F_Cu.gtl  glycon-F_Plakken.gtp  glycon-F_Silkscreen.gto  glycon-NPTH.drl  glycon-PTH.drl
hardware/kicad/: #auto_saved_files#  fp-info-cache  glycon.cad  glycon.csv  glycon.kicad_pcb  glycon.kicad_prl  glycon.kicad_pro  glycon.kicad_sch  glycon.kicad_sch-bak
hardware/kicad/glycon_rev1.0/: glycon_02_16.cad  glycon_02_16.kicad_prl  glycon_02_16.kicad_pro  glycon_02_16.kicad_sch
kernel/: meson.build
kernel/src/: main.asm
